# ur-commit-mentor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commit_analysis.rs  main.rs
web/: bun.lockb  package.json
web/app/: page.tsx
